--- a/NodeJS/ExpressJS/public/css/contact.css
+++ b/NodeJS/ExpressJS/public/css/contact.css
@@ -11,7 +11,7 @@ main {
 .main-header {
     width: 100%;
     height: 3.5rem;
-    background-color: #65e765;
+    background-color: #ac65e7;
     padding: 0 1.5rem;
 }
 
