--- a/Appointments/views/index.html
+++ b/Appointments/views/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Appointment Booking System</title>
-  <link rel="stylesheet" href="/css/firstStyles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <div class="container">
     <h1>Welcome to the Appointment Booking System</h1>
-    <a href="/book-appointment.html" class="button">Book an Appointment</a>
-    <a href="/booked-appointments.html" class="button">View Booked Appointments</a>
+    <div>
+      <a href="/book-appointment" class="btn">Book an Appointment</a>
+      <a href="/booked-appointments" class="btn">View Booked Appointments</a>
+    </div>
   </div>
 </body>
 </html>
