--- a/Appointments/public/css/bookedStyles.css
+++ b/Appointments/public/css/bookedStyles.css
@@ -1,4 +1,3 @@
-/* Include Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
@@ -7,17 +6,17 @@ body {
     padding: 0;
     font-size: 16px;
     line-height: 1.5;
-    background-color: #f0f0f0; /* Light gray background color */
-    color: #333; /* Dark gray text color */
+    background-color: #f0f0f0;
+    color: #333;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff; /* White background color for container */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Shadow for container */
-    border-radius: 5px; /* Rounded corners for container */
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 
 h1 {
@@ -48,7 +47,7 @@ h1 {
     padding: 5px 10px;
     border: none;
     cursor: pointer;
-    border-radius: 3px; /* Rounded corners for button */
+    border-radius: 3px;
 }
 
 .delete-btn:hover {
