Implemented Adding, Viewing and Deleting Option for Expenses

--- a/Full Stack Expense App/views/main.html
+++ b/Full Stack Expense App/views/main.html
@@ -5,14 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expense Tracker</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 <div class="container">
-  <h2>Expense Tracker</h2>
-  <a href="/add-expense" class="btn">Add Expense</a>
-  <a href="/view-expenses" class="btn">View Expenses</a>
+  <div class="box">
+    <h2 class="title">Expense Tracker</h2>
+    <div class="buttons">
+      <a href="/add-expense" class="btn">Add Expense</a>
+      <a href="/view-expenses" class="btn">View Expenses</a>
+    </div>
+  </div>
 </div>
 
 </body>
