--- a/Full Stack Expense App/views/css/main.css
+++ b/Full Stack Expense App/views/css/main.css
@@ -1,27 +1,49 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f9fa;
   }
+  
   .container {
-    max-width: 800px;
-    margin: 50px auto;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
-  h2 {
-    color: #343a40;
+  
+  .title {
+    color: #343a40; /* dark gray */
+    margin-bottom: 20px;
   }
+  
+  .buttons {
+    display: flex;
+    justify-content: center;
+  }
+  
   .btn {
     display: inline-block;
     margin: 10px;
     padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: #0066ff; /* blue */
+    color: #fff; /* white */
     text-decoration: none;
     border-radius: 5px;
+    font-size: 16px;
   }
+
+  .box {
+    width: 400px;
+    border: 2px solid #007bff; /* blue border */
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #f8f9fa; /* light gray */
+  }
+  
+  
   .btn:hover {
-    background-color: #0056b3;
+    background-color: #00b33c; /* darker blue on hover */
   }
   
