--- a/Full Stack Expense App/views/css/view-expenses.css
+++ b/Full Stack Expense App/views/css/view-expenses.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
     margin: 0;
     padding: 0;
   }
@@ -8,9 +8,9 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #1d1a1a;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: #97bd9c;
   }
   
   h1 {
@@ -24,17 +24,17 @@ body {
   }
   
   th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #131212;
     padding: 8px;
     text-align: left;
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #f6f7ea;
   }
   
   tr:hover {
-    background-color: #f5f5f5;
+    background-color: #befde3;
   }
   
   button {
@@ -51,6 +51,6 @@ body {
   }
   
   .btn:hover {
-    background-color: #0056b3;
+    background-color: #114074;
   }
   
