updated routes, added connection to database, added create-table html file

--- a/Database Management/view/create-table.html
+++ b/Database Management/view/create-table.html
@@ -14,9 +14,11 @@
                 <input type="text" name="fieldName[]" required>
                 <label for="fieldType">Field Type:</label>
                 <select name="fieldType[]" required>
-                    <option value="text">Text</option>
-                    <option value="number">Number</option>
-                    <option value="date">Date</option>
+                    <option value="string">String</option>
+                    <option value="integer">Integer</option>
+                    <option value="boolean">Boolean</option>
+                    <option value="json">JSON</option>
+                    <option value="double">Double</option>
                 </select>
                 <button type="button" onclick="addField()">Add Field</button>
             </div>
@@ -34,9 +36,11 @@
                 <input type="text" name="fieldName[]" required>
                 <label for="fieldType">Field Type:</label>
                 <select name="fieldType[]" required>
-                    <option value="text">Text</option>
-                    <option value="number">Number</option>
-                    <option value="date">Date</option>
+                    <option value="string">String</option>
+                    <option value="integer">Integer</option>
+                    <option value="boolean">Boolean</option>
+                    <option value="json">JSON</option>
+                    <option value="double">Double</option>
                 </select>
                 <button type="button" onclick="removeField(this)">Remove</button>
             `;
